z-index fix

--- a/assets/scss/clientpage.scss
+++ b/assets/scss/clientpage.scss
@@ -162,13 +162,14 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 350px;
+    z-index: 100;
 }
 
 .main-arrow{
     position: absolute;
     left: -300px;
     top: 30px;
-    z-index: -1200px;
+    z-index: -400;
 }
 
 .wrapper-table{
